# OceanDataConnector

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  ODP_data_pull.ipynb  ODPworkspace_demotools.py  PGS_OBIS-usecase-simple.ipynb  PGS_geospatial_querying.ipynb  README.md  noxfile.py  pyproject.toml  requirements.txt  simulator_funcs.py
.github/workflows/: notebook-example-test.yml  test_OBIS__ipynb.yml  test_WoRMS__ipynb.yml  test_notebook.yml  test_notebook.yml.tmpl  test_notebooks.yml
Data Products/: Simulator, Comparing Emissions.ipynb  simulator_funcs.py  wpi.csv
Hackathons/: DNB.me  DNB_hackathon.ipynb
Hackathons/WiDS/: GlobalFacilityGeolocation_Bloomberg.xlsx  LICENSE  README.md  champagne_coding.ipynb
Hackathons/WindEurope/: EMODnet_human_activity.ipynb  Obis_Hackathons.ipynb  WindEurope.ipynb  aggregated-values.csv  blob_tools.py  config.yaml  probability-of-occurrence.csv  read_vestas_data.ipynb
SDK/: ODP_selecetor_demo.ipynb  SDK.md
SDK/ExampleNotebooks/: GEBCO Bathymetry.ipynb  WorldOceanAtlas.ipynb
data/: EstimatedShipEmissions.md  MarineRegions.md  NOAA_CRW_bleaching_classifier.ipynb  OBIS.md  VesselEmissions.ipynb  WoRMS.md  WorldOceanAtlas.md  WorldOceanDatabase.md
data/EMODnet_Human_Activity/: EMODnet_HA.md  EMODnet_human_activity.ipynb
data/GEBCO Bathymetry/: GEBCO Bathymetry.ipynb  GEBCO Bathymetry.md  GEBCO_Bathymetry.ipynb
data/GlobalVesselEmissions/: GlobalVesselEmissons.md  GriddedVesselEmissionsAndTraffic.ipynb  VesselEmssions.ipynb
data/Marine Regions/: MarineRegions.ipynb  MarineRegions.md
data/NOAA Coral Reef Watch/: CRW_bleaching.ipynb  CRW_example_notebook.ipynb  NOAA_CRW_bleaching_classifier.ipynb  classification_v1.ipynb  cleanup_bleaching_data.ipynb  scaler.pkl
data/OBIS/: OBIS.ipynb  OBIS.md  OBIS2.ipynb  OBIS_2.ipynb  Untitled.ipynb
data/OceanLab/: OceanLab.ipynb  OceanLab.md
data/ProtectedSeas MPA/: ProtectedSeas.md
data/VesselEmissions/: README.md  Tutorial 1 - Gridded Emissions Data.ipynb  Tutorial 2 - Voyage Emissions Data.ipynb  Tutorial 4 - Green Corridor Emissions.ipynb  hackathon_utils.py  requirements.txt
data/WIO_Symphony/: Symphony_MPA.ipynb  WIO_symphony_demo.ipynb
data/World Ocean Atlas/: WorldOceanAtlas.ipynb  WorldOceanAtlas.md
data/World Ocean Database/: WorldOceanDatabase.md  WorldOceanDatabase_2.ipynb  WorldOceanDatabase_functions.ipynb  WorldOceanDatabase_selector.ipynb
dataset-examples/: EMODnetHumanActivities_access_data.ipynb  GFW_HumanAssets_access_data.ipynb  GLODAP_access_data.ipynb  OceanSensitiveAreas_access_example.ipynb  PGS_CTDBiotaADCP_access_data.ipynb  PGS_OBIS_combination.ipynb  ProtectedSeas_data.ipynb  ProtectedSeas_example.ipynb  README.md  SeamountsDatabase_access_data.ipynb  WorldPortIndex_access_data.ipynb  helper_functions.py
scripts/: generate_gh_workflow.py
tabular-upload/: example_publish_iliad.ipynb  iliad.parquet
workflow-examples/: raw_file_upload.ipynb
(+19 files in other folders)
