[tool.poetry]
name = "odc-example-notebooks"
version = "0.1.0"
description = "examples for ODC datasets"
authors = ["Tara Zeynep Baris <tara.baris@oceandata.earth>"]
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
pydeck = "^0.7.1"
geopandas = "^0.10.2"
SQLAlchemy = "^1.4.36"
geopy = "^2.2.0"
matplotlib = "^3.5.1"
cmocean = "^2.0"
xarray = "^2022.3.0"
azure-core = "^1.23.1"
azure-storage-blob = "^12.11.0"
altair = "^4.2.0"
hvplot = "^0.7.3"
zarr = "^2.11.3"
pyproj = "^3.3.1"
Cartopy = "0.18.0"

[tool.poetry.dev-dependencies]
nox = "^2022.1.7"
papermill = "^2.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
