[tool.poetry]
name = "odc-example-notebooks"
version = "0.1.0"
description = "examples for ODC datasets"
authors = ["Tara Zeynep Baris <tara.baris@oceandata.earth>"]
license = "mit"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "1.4.0"
numpy = "^1.22.3"
pydeck = "^0.7.1"
geopandas = "^0.10.2"
SQLAlchemy = "^1.4.36"
geopy = "2.2.0"
matplotlib = "^3.5.1"
cmocean = "^2.0"
xarray = "^2022.3.0"
azure-core = "^1.23.1"
azure-storage-blob = "^12.11.0"
altair = "^4.2.0"
hvplot = "^0.7.3"
zarr = "^2.11.3"
pyshp = "^2.2.0"
odp = {git = "https://oceandatafoundation@dev.azure.com/oceandatafoundation/ODP/_git/odp-python-sdk"}
ipyleaflet = "^0.16.0"
Cartopy = "0.20.2"
psycopg2-binary = "^2.9.3"
scipy = "1.8.0"
descartes = "1.1.0"
geocube = "^0.2.0"
geojson = "2.5.0"
geoviews = "^1.9.5"
h5netcdf = "^1.0.0"
h5py = "^3.6.0"
mapclassify = "^2.4.3"
xarray-leaflet = "^0.1.15"
xarrayutils = "^1.1.1"
zict = "^2.2.0"
aiobotocore = "^2.2.0"
aiohttp = "^3.8.1"
aioitertools = "^0.10.0"
aiosignal = "^1.2.0"
black = {extras = ["jupyter"], version = "^22.3.0"}

[tool.poetry.dev-dependencies]
nox = "^2022.1.7"
papermill = "^2.3.4"
nox-poetry = "^0.9.0"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
black = "^22.3.0"
pre-commit = "^2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
